fix: disable process guardian entirely — was root cause of spawn loop
The external watchdog (guardian.bat) spawned cmd.exe processes that
restarted javaw, which spawned more guardians, ad infinitum.
Singleton guard (INSTANCE_RUNNING) already prevents duplicate windows.
Guardian removed. No more exponential spawn.